# aiyu_webauthn

./: README.md  dune-project  lokto_webauthn.opam
dune.lock/: aiyu_cbor.dev.pkg  lock.dune  lokto_cbor.dev.pkg  uuidm.0.9.10.pkg
example/: dune  dune-project  server.ml
example/assets/: index.html
lib/: cbor.ml  dune  json.ml
lib/authentication/: options.ml  response.ml
lib/registration/: options.ml  response.ml
lib/spec/: attestation_conveyance_preference.ml  attestation_credential_data.ml  attestation_object.ml  attestation_statement_format_identifier.ml  attestation_type.ml  authentication_response_json.ml  authenticator_assertion_response_json.ml  authenticator_attachment.ml  authenticator_attestation_response_json.ml  authenticator_data.ml  authenticator_selection_criteria.ml  authenticator_transport.ml  base64_url_string.ml  challenge.ml  collected_client_data.ml  cose_algorithm_identifier.ml  cose_key.ml  credential_record.ml  flags.ml  public_key_credential_creation_options.ml  public_key_credential_descriptor.ml  public_key_credential_hint.ml  public_key_credential_parameters.ml  public_key_credential_request_options.ml  public_key_credential_rp_entity.ml  public_key_credential_type.ml  public_key_credential_user_entity.ml  registration_response_json.ml  resident_key_requirement.ml  user_verification_requirement.ml
test/: dune  test_aiyu_webauthn.ml  test_lokto_webauthn.ml
